Added final simulation parameters describing simulation. Deleted unused files. Improved tests.